--- a/main.html
+++ b/main.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Alphabetical Article Sorter</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <h2>Sorted Band Names</h2>
+
+  <!-- REQUIRED ID -->
+  <ul id="band"></ul>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
