--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 
   <h2>Sorted Band Names</h2>
 
-  <!-- REQUIRED ID -->
-  <ul id="band"></ul>
+  <!-- ✅ IMPORTANT: id must be "bands" -->
+  <ul id="bands"></ul>
 
   <script src="script.js"></script>
 </body>
